# rust-web-backend

./: .Dockerfile  .dockerignore  .env  .env.development  .env.production  .gitignore  Cargo.toml  README.md  docker-compose.yml  sqlx-data.json
migrations/: global.sql  user_roles.sql  user_status.sql  users.sql
src/: main.rs
src/assets/: mod.rs  user_verification_email.rs
src/controllers/: mod.rs
src/controllers/admin/user/: data.rs  handler.rs  mod.rs
src/controllers/customer/: index.rs
src/controllers/global/user/: data.rs  handler.rs  handler_protected.rs  mod.rs
src/controllers/internal/user/: handler.rs
src/controllers/system/user/: data.rs  handler.rs  mod.rs
src/db/postgres/: mod.rs
src/middlewares/: auth.rs
src/regex/: user.rs
src/routes/: mod.rs
src/routes/admin/: mod.rs  user.rs
src/routes/customer/: index.rs  mod.rs
src/routes/global/: mod.rs  user.rs
src/routes/global/user/: mod.rs  protected_route.rs
src/routes/superadmin/: mod.rs  user.rs
src/routes/system/: mod.rs  user.rs
src/utils/: auth.rs  cli.rs  error.rs  http_body.rs  mailer.rs  mod.rs  paginate.rs  validator.rs
